<resources>
    <string name="app_name">LoadApp</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree</string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_channel_id" translatable="false">download_channel</string>
    <string name="notification_channel_name" translatable="true">download</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="option1_click">Glide-image Loading library by BumpTech</string>
    <string name="option2_click">LoadApp current repository by Udacity</string>
    <string name="option3_click">Retrofit - typeSafe Http client for android and java by square. inc</string>
    <string name="logo">Logo</string>
    <string name="file_name_lbl">File Name:</string>
    <string name="status_lbl">Status:</string>
    <string name="ok_btn">OK</string>
    <string name="textview">TextView</string>
</resources>
