<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".MainActivity"
        tools:showIn="@layout/activity_main">
    <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            tools:src="@drawable/logo"
            android:id="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/load_option"
            android:contentDescription="@string/logo"
            android:layout_marginBottom="8dp"
            android:scaleType="centerCrop"
    />
    <RadioGroup
            android:id="@+id/load_option"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/custom_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView">
        <RadioButton
                android:text="@string/option1_click"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:id="@+id/option1"
                android:onClick="selectedOption"
        />
        <RadioButton
                android:text="@string/option2_click"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:id="@+id/option2"
                android:onClick="selectedOption"/>
        <RadioButton
                android:text="@string/option3_click"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:id="@+id/option3"
                android:onClick="selectedOption"/>
    </RadioGroup>
    <com.udacity.LoadingButton
            android:id="@+id/custom_button"
            android:layout_width="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_height="60dp"
            android:layout_margin="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="1.0"
            android:contentDescription="@string/app_description"/>

</androidx.constraintlayout.widget.ConstraintLayout>