<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".DetailActivity"
        tools:showIn="@layout/activity_detail">

    <TextView
            android:text="@string/file_name_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="24dp" android:textSize="20sp"
            android:layout_marginStart="24dp"/>
    <TextView
            android:text="@string/status_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintStart_toStartOf="@+id/textView" android:layout_marginTop="70dp"
            android:textSize="20sp"/>
    <TextView
            android:text="@string/textview"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/file_name_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView" app:layout_constraintTop_toTopOf="@+id/textView"
            android:textColor="@color/colorPrimaryDark" android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView" android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>
    <TextView
            android:text="@string/textview"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/status_tv"
            app:layout_constraintEnd_toEndOf="@+id/file_name_tv"
            app:layout_constraintBottom_toBottomOf="@+id/textView2" app:layout_constraintTop_toTopOf="@+id/textView2"
            android:textColor="@color/colorPrimaryDark" android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/file_name_tv"/>
    <Button
            android:text="@string/ok_btn"
            android:layout_width="191dp"
            android:layout_height="48dp" android:id="@+id/btn_ok"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="25dp" android:layout_marginEnd="172dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="151dp" android:backgroundTint="#FFC107"/>
</androidx.constraintlayout.widget.ConstraintLayout>